roles/centos-14-jenkins/helm/jenkins/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins
  namespace: infra
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/rewrite-target: /    
spec:
  rules:
  - host: jenkins.mwportal.com
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins
          servicePort: 8080
